<resources>
    <string name="app_name">Ridecell</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="empty_name">Enter a valid name</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="password_field_small_length_eight">Password less than 8 digits</string>

    <string name="password_field_full_add">Password should contain one upper case, one lower case, one number and a special character</string>
    <string name="by_tapping_to_login_or_creating_account_you_agree_to_our_terms_and_conditions">By tapping to login or creating account, you agree to our terms and conditions.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="logout">Logout</string>
    <string name="forgot_password_header">Forgot Password?</string>
    <string name="no_worries_we_ll_sort_it_out">No worries! We\'ll sort it out</string>
    <string name="reset_password">Reset Password</string>

</resources>