<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/dp_32"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvForgotPasswordSampleTextHeader"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_header"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgotPasswordSampleTextPara"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/no_worries_we_ll_sort_it_out"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordSampleTextHeader" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlEnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_16"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordSampleTextPara">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingVertical="@dimen/dp_16"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:text="@string/reset_password"
        tools:layout_editor_absoluteX="32dp" />
</androidx.constraintlayout.widget.ConstraintLayout>